@@ -17,6 +17,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+server/build_map.c: Add support for buildable signs, and magic mouths/ears.
+Alex Schultz 2005-08-15
+
 lib/Makefile.am, lib/Makefile.in: Actually install help file for showpets.
 common/living.c, include/living.h: Make global arrays really const.
 Andreas Kirschbaum 2005-08-15
